# public/swagger.yaml
@@ -101,6 +101,9 @@ components:
                     format: date-time
                 email_verified:
                     type: boolean
+                total_amount:
+                    type: number
+                    format: double
                 account_pincode:
                     type: string
                 account_id:
@@ -121,6 +124,7 @@ components:
                 - account_number
                 - Update_At
                 - email_verified
+                - total_amount
                 - account_pincode
                 - account_id
                 - transection_id
@@ -133,6 +137,9 @@ components:
                     format: double
                 account_number:
                     type: string
+                amount:
+                    type: number
+                    format: double
                 createdAt:
                     type: string
                 payment_type:
@@ -141,15 +148,22 @@ components:
                     type: string
                 transection_type:
                     type: string
+                recever_customer_account_number:
+                    type: string
+                recever_customer_mobile_number:
+                    type: string
                 customer_id:
                     $ref: '#/components/schemas/Customer'
             required:
                 - id
                 - account_number
+                - amount
                 - createdAt
                 - payment_type
                 - loan_id
                 - transection_type
+                - recever_customer_account_number
+                - recever_customer_mobile_number
                 - customer_id
             type: object
             additionalProperties: false
@@ -263,6 +277,44 @@ components:
             required:
                 - id
                 - account_pincode
+            type: object
+            additionalProperties: false
+        TransetionType:
+            enum:
+                - Payment_UPI
+                - Payment_CARD
+            type: string
+        Payment_type:
+            enum:
+                - credit
+                - deposit
+            type: string
+        Payment:
+            properties:
+                id:
+                    type: number
+                    format: double
+                For:
+                    $ref: '#/components/schemas/TransetionType'
+                Type:
+                    $ref: '#/components/schemas/Payment_type'
+                mobile_Account_number:
+                    type: string
+                amount:
+                    type: number
+                    format: double
+                pin_code:
+                    type: string
+                OTP:
+                    type: string
+            required:
+                - id
+                - For
+                - Type
+                - mobile_Account_number
+                - amount
+                - pin_code
+                - OTP
             type: object
             additionalProperties: false
         Department:
@@ -629,6 +681,26 @@ paths:
                                 file:
                                     type: string
                                     format: binary
+    /customer/create-transetion:
+        post:
+            operationId: CreatePayment
+            responses:
+                '200':
+                    description: Ok
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Transection'
+            tags:
+                - Customer
+            security: []
+            parameters: []
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/Payment'
     /bank-department:
         post:
             operationId: AddDepartment
