# src/eumn/TransectionType.ts
@@ -1,0 +1,6 @@
+
+
+export  enum TransetionType {
+   UPI = "Payment_UPI",
+   CARD = "Payment_CARD"
+}
